--- a/login.html
+++ b/login.html
@@ -47,7 +47,7 @@ $(endif)
 <div id="box">
     <div id="topbox">
     <legend>
-    <img src="logo.png"/>
+    <img src="Excowork@100x.png"/>
     </legend></div>
     
 <div><input id="user" autocomplete="on" name="username" type="text" value="$(username)" placeholder="Username"/></div>
